src/objects/Meta__c.object
<CustomObject>
    <fields>
        <fullName>Dias_ejecutados__c</fullName>
        <formula>DAY( TODAY() )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dias ejecutados</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dias_laborales__c</fullName>
        <label>Días laborales</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meta__c</fullName>
        <label>Meta desem bogotá</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprob_junior__c</fullName>
        <label>Meta aprob junior</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprob_lider__c</fullName>
        <label>Meta aprob lider</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobaci_n_bucaramanga__c</fullName>
        <label>Meta aprobación bucaramanga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion__c</fullName>
        <label>Meta aprobación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_barranquilla__c</fullName>
        <label>Meta aprobación barranquilla</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_bogota__c</fullName>
        <label>Meta aprobación bogotá</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_cali__c</fullName>
        <label>Meta aprobación cali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_canal_digital__c</fullName>
        <label>Meta aprobación canal digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_medellin__c</fullName>
        <label>Meta aprobación medellin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_aprobacion_pereira__c</fullName>
        <label>Meta aprobación pereira</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_barranquilla__c</fullName>
        <label>Meta desem barranquilla</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_bucaramanga__c</fullName>
        <label>Meta desem bucaramanga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_cali__c</fullName>
        <label>Meta desem cali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_canal_digital__c</fullName>
        <label>Meta desem canal digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_medellin__c</fullName>
        <label>Meta desem medellin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desem_pereira__c</fullName>
        <label>Meta desem pereira</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_desembolso__c</fullName>
        <label>Meta desembolso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_asesor__c</fullName>
        <label>Meta leg asesor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_barranquilla__c</fullName>
        <label>Meta leg barranquilla</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_bogota__c</fullName>
        <label>Meta leg bogotá</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_bucaramanga__c</fullName>
        <label>Meta leg bucaramanga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_cali__c</fullName>
        <label>Meta leg cali</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_canal_digital__c</fullName>
        <label>Meta leg canal digital</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_medellin__c</fullName>
        <label>Meta leg medellin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_leg_pereira__c</fullName>
        <label>Meta leg pereira</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Meta_legalizacion__c</fullName>
        <label>Meta legalización</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solicitud_de_credito__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solicitud de crédito</label>
        <referenceTo>Solicitud_de_credito__c</referenceTo>
        <relationshipLabel>Metas</relationshipLabel>
        <relationshipName>Metas</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>